--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -161,17 +161,17 @@
     <Compile Include="Blocks\Communication\CommunicationTemplateDetail\CommunicationTemplateDetailCommunicationTemplateBag.cs" />
     <Compile Include="Blocks\Communication\CommunicationTemplateDetail\CommunicationTemplateDetailGetPreviewMessageRequestBag.cs" />
     <Compile Include="Blocks\Communication\CommunicationTemplateDetail\CommunicationTemplateDetailInitializationBox.cs" />
-    <Compile Include="Blocks\Core\AIAgentDetail\AgentSkillBag.cs" />
-    <Compile Include="Blocks\Core\AIAgentDetail\AIAgentBag.cs" />
-    <Compile Include="Blocks\Core\AIAgentDetail\AIAgentDetailOptionsBag.cs" />
-    <Compile Include="Blocks\Core\AIAgentDetail\EditSkillResponseBag.cs" />
-    <Compile Include="Blocks\Core\AIAgentDetail\GetComponentDefinitionResponseBag.cs" />
-    <Compile Include="Blocks\Core\AIAgentList\AIAgentListOptionsBag.cs" />
-    <Compile Include="Blocks\Core\AISkillDetail\AISkillBag.cs" />
-    <Compile Include="Blocks\Core\AISkillDetail\AISkillDetailOptionsBag.cs" />
-    <Compile Include="Blocks\Core\AISkillFunctionList\AISkillFunctionBag.cs" />
-    <Compile Include="Blocks\Core\AISkillFunctionList\AISkillFunctionListOptionsBag.cs" />
-    <Compile Include="Blocks\Core\AISkillList\AISkillListOptionsBag.cs" />
+    <Compile Include="Blocks\Core\AI\AIAgentDetail\AgentSkillBag.cs" />
+    <Compile Include="Blocks\Core\AI\AIAgentDetail\AIAgentBag.cs" />
+    <Compile Include="Blocks\Core\AI\AIAgentDetail\AIAgentDetailOptionsBag.cs" />
+    <Compile Include="Blocks\Core\AI\AIAgentDetail\EditSkillResponseBag.cs" />
+    <Compile Include="Blocks\Core\AI\AIAgentDetail\GetComponentDefinitionResponseBag.cs" />
+    <Compile Include="Blocks\Core\AI\AIAgentList\AIAgentListOptionsBag.cs" />
+    <Compile Include="Blocks\Core\AI\AISkillDetail\AISkillBag.cs" />
+    <Compile Include="Blocks\Core\AI\AISkillDetail\AISkillDetailOptionsBag.cs" />
+    <Compile Include="Blocks\Core\AI\AISkillFunctionList\AISkillFunctionBag.cs" />
+    <Compile Include="Blocks\Core\AI\AISkillFunctionList\AISkillFunctionListOptionsBag.cs" />
+    <Compile Include="Blocks\Core\AI\AISkillList\AISkillListOptionsBag.cs" />
     <Compile Include="Blocks\Core\AutomationTriggerDetail\AutomationEventBag.cs" />
     <Compile Include="Blocks\Core\AutomationTriggerDetail\AutomationTriggerBag.cs" />
     <Compile Include="Blocks\Core\AutomationTriggerDetail\AutomationTriggerDetailOptionsBag.cs" />
