--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -76,6 +76,10 @@
     <Compile Include="Migrations\202506161533187_TempFixAgentAnchorEntityType.Designer.cs">
       <DependentUpon>202506161533187_TempFixAgentAnchorEntityType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202506192037468_TempAddAgentPagesAndBlocks.cs" />
+    <Compile Include="Migrations\202506192037468_TempAddAgentPagesAndBlocks.Designer.cs">
+      <DependentUpon>202506192037468_TempAddAgentPagesAndBlocks.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.1\202504071505457_AddBluetoothBeaconIdentifiers.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.1\202504071505457_AddBluetoothBeaconIdentifiers.Designer.cs">
       <DependentUpon>202504071505457_AddBluetoothBeaconIdentifiers.cs</DependentUpon>
@@ -2675,6 +2679,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202506161533187_TempFixAgentAnchorEntityType.resx">
       <DependentUpon>202506161533187_TempFixAgentAnchorEntityType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202506192037468_TempAddAgentPagesAndBlocks.resx">
+      <DependentUpon>202506192037468_TempAddAgentPagesAndBlocks.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.1\202504071505457_AddBluetoothBeaconIdentifiers.resx">
       <DependentUpon>202504071505457_AddBluetoothBeaconIdentifiers.cs</DependentUpon>
