--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -53,6 +53,7 @@
     <PackageReference Include="Microsoft.Azure.SignalR.AspNet" Version="1.0.14" />
     <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.1.3" />
     <PackageReference Include="Microsoft.Diagnostics.Tracing.EventSource.Redist" Version="1.1.28" />
+    <PackageReference Include="Microsoft.Extensions.AI" Version="9.5.0" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="2.21.301221612" />
@@ -61,6 +62,7 @@
     <PackageReference Include="Microsoft.Owin" Version="4.2.2" />
     <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="3.0.1" />
     <PackageReference Include="Microsoft.Owin.Security" Version="4.0.0" />
+    <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.54.0" />
     <PackageReference Include="Microsoft.SqlServer.Types" Version="11.0.2" />
     <PackageReference Include="Microsoft.Web.Xdt" Version="2.1.1" />
     <PackageReference Include="NEST.JsonNetSerializer" Version="7.17.0" />
@@ -85,7 +87,7 @@
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.2" />
     <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
-    <PackageReference Include="System.Text.Json" Version="6.0.9" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
     <PackageReference Include="System.Threading.Channels" Version="8.0.0" />
     <PackageReference Include="TimeZoneConverter" Version="6.0.1" />
     <PackageReference Include="Twilio" Version="5.1.0" />
