- Various updates to fix build from merge.

--- a/Rock.Blocks/Rock.Blocks.NG.csproj
+++ b/Rock.Blocks/Rock.Blocks.NG.csproj
@@ -30,8 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Rock.Common\Rock.Common.NG.csproj" />
-    <ProjectReference Include="..\Rock.Enums\Rock.Enums.NG.csproj" />
+    <ProjectReference Include="..\Rock.Common\Rock.Common.csproj" />
     <ProjectReference Include="..\Rock.ViewModels\Rock.ViewModels.NG.csproj" />
     <ProjectReference Include="..\Rock\Rock.NG.csproj" />
   </ItemGroup>
