--- a/Rock.Lava/Rock.Lava.csproj
+++ b/Rock.Lava/Rock.Lava.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFrameworks>net472;net6.0</TargetFrameworks>
     <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
     <RockWebPath>..\RockWeb</RockWebPath>
     <CopyToRockWeb>True</CopyToRockWeb>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Condition=" '$(TargetFramework)' == 'net6.0' " Include="Humanizer" Version="2.1.0" />
     <PackageReference Include="Microsoft.Win32.Primitives" Version="4.3.0" />
     <PackageReference Include="NETStandard.Library" Version="2.0.3" />
     <PackageReference Include="System.AppContext" Version="4.3.0" />
@@ -62,7 +63,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Humanizer">
+    <Reference Condition=" '$(TargetFramework)' == 'net472' " Include="Humanizer">
       <HintPath>..\libs\Humanizer.2.1.0\Humanizer.dll</HintPath>
     </Reference>
     <Reference Include="System.Web" />
