--- a/Rock/Rock.NG.csproj
+++ b/Rock/Rock.NG.csproj
@@ -269,6 +269,7 @@
     <PackageReference Include="System.IO.Hashing" Version="8.0.0" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.10" />
     <PackageReference Include="System.Runtime.Caching" Version="5.0.0" />
+    <PackageReference Include="TimeZoneConverter" Version="6.0.1" />
     <PackageReference Include="Twilio" Version="5.1.0" />
     <PackageReference Include="UAParser" Version="3.1.47" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="5.1.37" />
@@ -277,9 +278,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Rock.Common\Rock.Common.csproj" />
     <ProjectReference Include="..\Rock.DownhillCss\Rock.DownhillCss.NG.csproj" />
-    <ProjectReference Include="..\Rock.Lava\Rock.Lava.NG.csproj" />
-    <ProjectReference Include="..\Rock.Version\Rock.Version.NG.csproj" />
-    <ProjectReference Include="..\Rock.ViewModels\Rock.ViewModels.NG.csproj" />
+    <ProjectReference Include="..\Rock.Lava.Shared\Rock.Lava.Shared.csproj" />
+    <ProjectReference Include="..\Rock.Lava\Rock.Lava.csproj" />
+    <ProjectReference Include="..\Rock.Version\Rock.Version.csproj" />
+    <ProjectReference Include="..\Rock.ViewModels\Rock.ViewModels.csproj" />
   </ItemGroup>
 
   <ItemGroup>
