--- a/Rock.Rest/packages.config
+++ b/Rock.Rest/packages.config
@@ -20,8 +20,10 @@
   <package id="Microsoft.IdentityModel.Protocols" version="5.2.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.2.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.7.0" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="NodaTime" version="3.0.0" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.7.0" targetFramework="net472" />
