- Added a Grouped View option for the Obsidian View Model code generator and updated to save Diff Type as a user setting.

--- a/Rock.CodeGeneration/App.config
+++ b/Rock.CodeGeneration/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Rock.CodeGeneration.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -8,4 +13,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <Rock.CodeGeneration.Properties.Settings>
+      <setting name="ObsidianViewModelsIsGroupedView" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ObsidianViewModelsDiffType" serializeAs="String">
+        <value>0</value>
+      </setting>
+    </Rock.CodeGeneration.Properties.Settings>
+  </userSettings>
 </configuration>
