--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -119,6 +119,7 @@
     <PackageReference Include="AngleSharp" Version="1.3.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.20.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="CacheManager.SystemRuntimeCaching" Version="2.0.0" />
     <PackageReference Include="CS-Script" Version="4.9.7" />
     <PackageReference Include="CronExpressionDescriptor" Version="2.41.0" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
@@ -126,6 +127,7 @@
     <PackageReference Include="Google.Cloud.Storage.V1" Version="2.4.0" />
     <PackageReference Include="FCM.Net.Core" Version="1.0.0.1" />
     <PackageReference Include="FirebaseAdmin" Version="3.2.0" />
+    <PackageReference Include="Hashids.net" Version="1.7.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
     <PackageReference Include="Ical.Net" Version="4.2.0" />
     <PackageReference Include="IdentityModel" Version="3.0.0" />
