- Fixed behavior of Obsidian Workflow Entry when using a Person Entry form to better match the behavior of the WebForms block.

--- a/Rock.Tests.Integration/Rock.Tests.Integration.csproj
+++ b/Rock.Tests.Integration/Rock.Tests.Integration.csproj
@@ -412,6 +412,7 @@
     <Compile Include="Web\Cache\RateLimiterCacheTests.cs" />
     <Compile Include="Web\Utilities\RockUpdateHelperTests.cs" />
     <Compile Include="Core\Workflow\Action\WorkflowActionReminderAddTests.cs" />
+    <Compile Include="Workflow\WorkflowPersonEntryProcessorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
