- Updated to latest SemanticKernel version.

--- a/Rock.AI.Agent/Rock.AI.Agent.csproj
+++ b/Rock.AI.Agent/Rock.AI.Agent.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
@@ -14,10 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.5" />
     <PackageReference Include="Microsoft.ML.Tokenizers.Data.O200kBase" Version="1.0.2" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.54.0" />
-    <PackageReference Include="System.ClientModel" Version="1.4.1" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.59.0" />
   </ItemGroup>
 
   <ItemGroup>
