--- a/Rock.JavaScript.Obsidian/package.json
+++ b/Rock.JavaScript.Obsidian/package.json
@@ -77,6 +77,7 @@
     "highlight.js": "^11.8.0",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
+    "jsonschema": "^1.5.0",
     "liquidjs": "^10.9.2",
     "luxon": "^3.4.2",
     "mitt": "^3.0.1",
